FIX: nix addition of zero vector to features :zap:

--- a/Upload Training Data to S3.ipynb
+++ b/Upload Training Data to S3.ipynb
@@ -115,18 +115,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sagemaker doesn't like input data with a single feature apparently. So we'll add zeros\n",
-    "# see comment here: https://stackoverflow.com/questions/51635902/aws-sagemaker-unable-to-parse-csv\n",
-    "train_df[2] = [0 for i in range(len(train_df))]\n",
-    "test_df[2] = [0 for i in range(len(test_df))]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "train_df.to_csv('srt_train.csv', index = False)\n",
     "\n",
     "test_df.to_csv('srt_test.csv', index = False)"
@@ -141,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +155,6 @@
        "      <th></th>\n",
        "      <th>target</th>\n",
        "      <th>text</th>\n",
-       "      <th>zero</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -175,46 +162,41 @@
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>This is a combined synopsis/solicitation for c...</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>General Information:   Document Type:         ...</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Attachment 1                         Glossary ...</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>0.0</td>\n",
        "      <td>STATEMENT OF WORK     (SOW)    FOR    317 RCS/...</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>0.0</td>\n",
        "      <td>|SOLICITATION, OFFER AND AWARD                ...</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   target                                               text  zero\n",
-       "0     0.0  This is a combined synopsis/solicitation for c...   0.0\n",
-       "1     0.0  General Information:   Document Type:         ...   0.0\n",
-       "2     1.0  Attachment 1                         Glossary ...   0.0\n",
-       "3     0.0  STATEMENT OF WORK     (SOW)    FOR    317 RCS/...   0.0\n",
-       "4     0.0  |SOLICITATION, OFFER AND AWARD                ...   0.0"
+       "   target                                               text\n",
+       "0     0.0  This is a combined synopsis/solicitation for c...\n",
+       "1     0.0  General Information:   Document Type:         ...\n",
+       "2     1.0  Attachment 1                         Glossary ...\n",
+       "3     0.0  STATEMENT OF WORK     (SOW)    FOR    317 RCS/...\n",
+       "4     0.0  |SOLICITATION, OFFER AND AWARD                ..."
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,8 +205,8 @@
     "import numpy as np\n",
     "\n",
     "test_df_check = pd.read_csv('srt_test.csv')\n",
-    "test_df_check.columns = ['target', 'text', 'zero']\n",
-    "test_df_check = test_df_check.astype({'target': np.float64, 'text': str, 'zero': np.float64})\n",
+    "test_df_check.columns = ['target', 'text']\n",
+    "test_df_check = test_df_check.astype({'target': np.float64, 'text': str})\n",
     "\n",
     "test_df_check.head()"
    ]
@@ -239,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
