FIX: nix commas when joining samples :bug:

--- a/srt.ipynb
+++ b/srt.ipynb
@@ -254,7 +254,7 @@
     "    return text.replace(\",\",\"\").replace(\"\\n\",\"\")\n",
     "\n",
     "test_df['1'] = test_df['1'].apply(format_as_csv)\n",
-    "x_test = \",\\n\".join(test_df['1'].tolist())"
+    "x_test = \"\\n\".join(test_df['1'].tolist())"
    ]
   },
   {
