--- a/srt.ipynb
+++ b/srt.ipynb
@@ -55,17 +55,16 @@
     "source_dir = 'pipeline'\n",
     "\n",
     "s3_ll_output_key_prefix = \"ll_training_output\"\n",
-    "preprocessor_output_path = 's3://{}/{}/{}/{}'.format(s3_bucket, prefix, s3_ll_output_key_prefix, 'll_preprocessor')\n",
+    "model_output_path = 's3://{}/{}/{}/{}'.format(s3_bucket, prefix, s3_ll_output_key_prefix, 'll_preprocessor')\n",
     "\n",
-    "sklearn_preprocessor = SKLearn(source_dir = source_dir,\n",
-    "                               entry_point = entry_point,\n",
-    "                               role = role,\n",
-    "                               train_instance_type = \"ml.c4.xlarge\",\n",
-    "                               sagemaker_session = sagemaker_session,\n",
-    "                               output_path = preprocessor_output_path)\n",
+    "sklearn_model = SKLearn(source_dir = source_dir,\n",
+    "                        entry_point = entry_point,\n",
+    "                        role = role,\n",
+    "                        train_instance_type = \"ml.c4.xlarge\",\n",
+    "                        sagemaker_session = sagemaker_session,\n",
+    "                        output_path = model_output_path)\n",
     "\n",
-    "\n",
-    "train_input = f's3://{s3_bucket}/{prefix}/srt_train.csv'"
+    "test_input = f's3://{s3_bucket}/{prefix}/srt_test.csv'"
    ]
   },
   {
@@ -74,120 +73,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sklearn_preprocessor.fit({'train': train_input})"
+    "sklearn_model.fit({'train': train_input}, logs = True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Batch transform the training data \n",
-    "With the preprocessor fitted, we can now preprocess our training data. We'll use **batch transform**, storing the output right back into s3."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define a SKLearn Transformer from the trained SKLearn Estimator\n",
-    "transformer_output_path = 's3://{}/{}/{}/{}'.format(s3_bucket, prefix, s3_ll_output_key_prefix, 'll_transformer')\n",
-    "\n",
-    "transformer = sklearn_preprocessor.transformer(instance_count = 1,\n",
-    "                                               instance_type = 'ml.m4.xlarge',\n",
-    "                                               assemble_with = 'Line',\n",
-    "                                               accept =' text/csv',\n",
-    "                                               output_path = transformer_output_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Preprocess training input\n",
-    "transformer.transform(train_input, content_type='text/csv')\n",
-    "print(f'Waiting for transform job: {transformer.latest_transform_job.job_name}')\n",
-    "transformer.wait()\n",
-    "preprocessed_train = transformer.output_path\n",
-    "print(f\"Transform job done. Outpath:  {preprocessed_train}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Fit a LinearLearner\n",
-    "Here we'll use our preprocessed training data to fit a LinearLearner Model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import boto3\n",
-    "from sagemaker.amazon.amazon_estimator import get_image_uri\n",
-    "ll_image = get_image_uri(boto3.Session().region_name, 'linear-learner')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#working with a subset of a larger dataset that won't have the 100 dimensions from the chi-2 selection, we \n",
-    "#need to manually fetch the dimensions in order to specify the feature_dim hyperparameter of the linear learner.\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
-    "train_out = f\"{preprocessed_train}/srt_train.csv.out\"\n",
-    "train_df = pd.read_csv(train_out)\n",
-    "# minus 1 to exclude the labels\n",
-    "feature_dim = train_df.shape[1] - 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "estimator_output_path = 's3://{}/{}/{}/{}'.format(s3_bucket, prefix, s3_ll_output_key_prefix, 'll_estimator')\n",
-    "\n",
-    "ll_estimator = sagemaker.estimator.Estimator(ll_image,\n",
-    "                                             role, \n",
-    "                                             train_instance_count = 1, \n",
-    "                                             train_instance_type = 'ml.m4.2xlarge',\n",
-    "                                             train_volume_size = 20,\n",
-    "                                             train_max_run = 3600,\n",
-    "                                             input_mode = 'File',\n",
-    "                                             output_path = estimator_output_path,\n",
-    "                                             sagemaker_session = sagemaker_session)\n",
-    "\n",
-    "ll_estimator.set_hyperparameters(feature_dim = feature_dim, \n",
-    "                                 predictor_type = 'binary_classifier', \n",
-    "                                 mini_batch_size = 5)\n",
-    "\n",
-    "ll_train_data = sagemaker.session.s3_input(preprocessed_train, \n",
-    "                                           distribution = 'FullyReplicated',\n",
-    "                                           content_type = 'text/csv', \n",
-    "                                           s3_data_type = 'S3Prefix')\n",
-    "\n",
-    "data_channels = {'train': ll_train_data}\n",
-    "\n",
-    "ll_estimator.fit(inputs = data_channels, logs = True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Set up the inference pipeline"
+    "# Deploy the Model"
    ]
   },
   {
@@ -209,31 +102,27 @@
     "\n",
     "timestamp_prefix = strftime(\"%Y-%m-%d-%H-%M-%S\", gmtime())\n",
     "\n",
-    "scikit_learn_inference_model = sklearn_preprocessor.create_model()\n",
-    "linear_learner_model = ll_estimator.create_model()\n",
+    "\n",
     "\n",
     "model_name = 'inference-pipeline-' + timestamp_prefix\n",
     "endpoint_name = 'inference-pipeline-ep-' + timestamp_prefix\n",
     "\n",
-    "sm_model = PipelineModel(name = model_name, \n",
-    "                         role = role, \n",
-    "                         models = [scikit_learn_inference_model, linear_learner_model])\n",
+    "scikit_learn_inference_model = sklearn_model.create_model(name = model_name,\n",
+    "                                                          role = role)\n",
     "\n",
-    "sm_model.deploy(initial_instance_count = 1, \n",
-    "                instance_type = 'ml.c4.xlarge',\n",
-    "                endpoint_name = endpoint_name)"
+    "scikit_learn_inference_model.deploy(initial_instance_count = 1, \n",
+    "                                    instance_type = 'ml.c4.xlarge',\n",
+    "                                    endpoint_name = endpoint_name)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Make a request to the pipeline endpoint \n",
+    "# Make a request to the endpoint \n",
     "Here we'll use the deployed model to get predictions for our test data. \n",
     "\n",
-    "Below, the `content_type` field configures the first container, while the `accept` field configures the last container.\n",
-    "\n",
-    "We make our request with the payload in `text/csv` format, since that is what our script currently supports. If other formats need to be supported, this would have to be added to the `output_fn()` method in our entrypoint. Note that we set the `accpet` to `application/json`, since LinearLearner does not support `text/csv`."
+    "We need to make our request with the payload in `text/csv` format, since that is what our script currently supports. If other formats need to be supported, this would have to be added to the `output_fn()` method in our entrypoint. Note that we set the `accept` to `application/json` to get our output that way."
    ]
   },
   {
