FIX: typo in training data path :pencil2:

--- a/srt.ipynb
+++ b/srt.ipynb
@@ -64,7 +64,7 @@
     "                        sagemaker_session = sagemaker_session,\n",
     "                        output_path = model_output_path)\n",
     "\n",
-    "test_input = f's3://{s3_bucket}/{prefix}/srt_test.csv'"
+    "train_input = f's3://{s3_bucket}/{prefix}/srt_train.csv'"
    ]
   },
   {
