FIX: remove unused kwarg :pencil2:

--- a/srt.ipynb
+++ b/srt.ipynb
@@ -107,8 +107,7 @@
     "model_name = 'inference-pipeline-' + timestamp_prefix\n",
     "endpoint_name = 'inference-pipeline-ep-' + timestamp_prefix\n",
     "\n",
-    "scikit_learn_inference_model = sklearn_model.create_model(name = model_name,\n",
-    "                                                          role = role)\n",
+    "scikit_learn_inference_model = sklearn_model.create_model(role = role)\n",
     "\n",
     "scikit_learn_inference_model.deploy(initial_instance_count = 1, \n",
     "                                    instance_type = 'ml.c4.xlarge',\n",
