ENH: import pandas and fix typo

--- a/srt.ipynb
+++ b/srt.ipynb
@@ -130,6 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "from sagemaker.predictor import json_serializer, csv_serializer, json_deserializer, RealTimePredictor\n",
     "from sagemaker.content_types import CONTENT_TYPE_CSV, CONTENT_TYPE_JSON\n",
     "\n",
@@ -141,8 +142,7 @@
     "    #since we make our request with the payload in text/csv format, we need to sanitize the text first\n",
     "    return text.replace(\",\",\"\").replace(\"\\n\",\"\")\n",
     "\n",
-    "test_df['1'] = test_df['1'].apply(format_as_csv)\n",
-    "x_test = \"\\n\".join(test_df['1'].tolist())"
+    "test_df['1'] = test_df['1'].apply(format_as_csv)"
    ]
   },
   {
@@ -157,9 +157,31 @@
     "                              sagemaker_session = sagemaker_session,\n",
     "                              serializer = csv_serializer,\n",
     "                              content_type = CONTENT_TYPE_CSV,\n",
-    "                              accept = CONTENT_TYPE_JSON)\n",
+    "                              accept = CONTENT_TYPE_JSON)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# request an inference for a single sample\n",
+    "sample = test_df['1'].iloc[0]\n",
     "\n",
-    "predictions_str = predictor.predict(x_test)\n",
+    "prediction_str = predictor.predict(sample)\n",
+    "prediction_dict = json.loads(predictions_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# request inferences for multiple samples\n",
+    "samples = test_df['1'].tolist()\n",
+    "predictions_str = predictor.predict(samples)\n",
     "predictions_dict = json.loads(predictions_str)"
    ]
   },
@@ -169,6 +191,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# evaluate predictions\n",
+    "\n",
     "y_true = test_df['0']\n",
     "y_pred = [i['predicted_label'] for i in predictions_dict['predictions']]\n",
     "\n",
