--- a/srt.ipynb
+++ b/srt.ipynb
@@ -57,12 +57,12 @@
     "s3_ll_output_key_prefix = \"ll_training_output\"\n",
     "model_output_path = 's3://{}/{}/{}/{}'.format(s3_bucket, prefix, s3_ll_output_key_prefix, 'll_preprocessor')\n",
     "\n",
-    "sklearn_model = SKLearn(source_dir = source_dir,\n",
-    "                        entry_point = entry_point,\n",
-    "                        role = role,\n",
-    "                        train_instance_type = \"ml.c4.xlarge\",\n",
-    "                        sagemaker_session = sagemaker_session,\n",
-    "                        output_path = model_output_path)\n",
+    "grid_search = SKLearn(source_dir = source_dir,\n",
+    "                      entry_point = entry_point,\n",
+    "                      role = role,\n",
+    "                      train_instance_type = \"ml.c4.xlarge\",\n",
+    "                      sagemaker_session = sagemaker_session,\n",
+    "                      output_path = model_output_path)\n",
     "\n",
     "train_input = f's3://{s3_bucket}/{prefix}/srt_train.csv'"
    ]
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sklearn_model.fit({'train': train_input}, logs = True)"
+    "grid_search.fit({'train': train_input}, logs = True)"
    ]
   },
   {
@@ -107,11 +107,11 @@
     "model_name = 'inference-pipeline-' + timestamp_prefix\n",
     "endpoint_name = 'inference-pipeline-ep-' + timestamp_prefix\n",
     "\n",
-    "scikit_learn_inference_model = sklearn_model.create_model(role = role)\n",
+    "model = grid_search.create_model(role = role)\n",
     "\n",
-    "scikit_learn_inference_model.deploy(initial_instance_count = 1, \n",
-    "                                    instance_type = 'ml.c4.xlarge',\n",
-    "                                    endpoint_name = endpoint_name)"
+    "model.deploy(initial_instance_count = 1, \n",
+    "             instance_type = 'ml.c4.xlarge',\n",
+    "             endpoint_name = endpoint_name)"
    ]
   },
   {
