DOC: enhance explanations :pencil:

--- a/srt.ipynb
+++ b/srt.ipynb
@@ -33,8 +33,8 @@
     "# Create a SageMaker Scikit estimator \n",
     "To run our Scikit-learn training script on SageMaker, we construct a `sagemaker.sklearn.estimator.sklearn` estimator, which accepts several constructor arguments:\n",
     "\n",
-    " - **entry_point**: The path to the Python script SageMaker runs for training and prediction.\n",
     " - **source_dir**: Path (absolute or relative) to a directory with any other training source code dependencies aside from tne entry point file (default: None). Structure within this directory are preserved when training on Amazon SageMaker.\n",
+    " - **entry_point**: The path to the Python script SageMaker runs for training and prediction.\n",
     " - **role**: Role ARN\n",
     " - **train_instance_type (optional)**: The type of SageMaker instances for training. Note: Because Scikit-learn does not natively support GPU training, Sagemaker Scikit-learn does not currently support training on GPU instance types.\n",
     " - **sagemaker_session (optional)**: The session used to train on Sagemaker.\n",
@@ -48,7 +48,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from time import gmtime, strftime\n",
     "from sagemaker.sklearn.estimator import SKLearn\n",
     "\n",
     "entry_point = 'sklearn_featureizer.py'\n",
@@ -73,6 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Note that this will take awhile.\n",
     "grid_search.fit({'train': train_input}, logs = True)"
    ]
   },
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use the Pipeline Model here. This sets up a sequence of models in a single endpoint; in this example, we configure our pipeline model with the fitted Scikit-learn inference model and the fitted Linear Learner model."
+    "Now that we've got a fitted model (i.e. the best estimator from the Grid Search), we'll deploy this model behind a single endpoint."
    ]
   },
   {
@@ -101,8 +101,6 @@
     "from time import gmtime, strftime\n",
     "\n",
     "timestamp_prefix = strftime(\"%Y-%m-%d-%H-%M-%S\", gmtime())\n",
-    "\n",
-    "\n",
     "\n",
     "model_name = 'inference-pipeline-' + timestamp_prefix\n",
     "endpoint_name = 'inference-pipeline-ep-' + timestamp_prefix\n",
@@ -121,7 +119,7 @@
     "# Make a request to the endpoint \n",
     "Here we'll use the deployed model to get predictions for our test data. \n",
     "\n",
-    "We need to make our request with the payload in `text/csv` format, since that is what our script currently supports. If other formats need to be supported, this would have to be added to the `output_fn()` method in our entrypoint. Note that we set the `accept` to `application/json` to get our output that way."
+    "We need to make our request with the payload in `text/csv` format, since that is what our script currently supports (see `input_fn()` in our entrypoin). If other formats need to be supported, this would have to be added to the our entrypoint. Note that we set the `accept` to `application/json` to get our output, i.e. the inferences, that way."
    ]
   },
   {
@@ -170,7 +168,8 @@
     "sample = test_df['1'].iloc[0]\n",
     "\n",
     "prediction_str = predictor.predict(sample)\n",
-    "prediction_dict = json.loads(predictions_str)"
+    "prediction_dict = json.loads(prediction_str)\n",
+    "prediction_dict"
    ]
   },
   {
@@ -182,7 +181,8 @@
     "# request inferences for multiple samples\n",
     "samples = test_df['1'].tolist()\n",
     "predictions_str = predictor.predict(samples)\n",
-    "predictions_dict = json.loads(predictions_str)"
+    "predictions_dict = json.loads(predictions_str)\n",
+    "predictions_dict"
    ]
   },
   {
@@ -194,7 +194,7 @@
     "# evaluate predictions\n",
     "\n",
     "y_true = test_df['0']\n",
-    "y_pred = [i['predicted_label'] for i in predictions_dict['predictions']]\n",
+    "y_pred = [i['prediction'] for i in predictions_dict['instances']]\n",
     "\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
