ENH: gridsearch more :alembic: (#3)

--- a/Upload Training Data to S3.ipynb
+++ b/Upload Training Data to S3.ipynb
@@ -7,8 +7,8 @@
     "# Upload Training Data to s3\n",
     "This notebook assumes:\n",
     " - You've got all of the labeled solicitaton documents within a directory named `labeled_fbo_docs`.\n",
-    " - You can use the `awscli` and have configured it.\n",
-    " - You have already created an S3 bucket (our is named `srt-sm`)."
+    " - You can use the `awscli` and have configured it. See [this](https://boto3.amazonaws.com/v1/documentation/api/latest/guide/configuration.html) for instructions. We recommend placing the credentials in a shared credential file (`~/.aws/credentials`)\n",
+    " - You have already created an S3 bucket (ours is named `srt-sm`)."
    ]
   },
   {
@@ -17,45 +17,9 @@
    "source": [
     "## Read in the training data\n",
     "\n",
-    "Below, we'll read in 50 of the nearly $1,000$ documents and extract the text along with the label (the label is in the file name). \n",
+    "Below, we'll read in the labeled documents and extract the text along with the label (the label is in the file name). \n",
     "\n",
     ">Although there are three lables (red, yellow and green), we're combining red and yellow as noncompliant ($0$) and treating green as compliant ($1$). This makes a binary classification challenge."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import random\n",
-    "\n",
-    "data = []\n",
-    "for i, file in enumerate(os.listdir('labeled_fbo_docs')):\n",
-    "    if i < 50:\n",
-    "        if file.startswith('GREEN'):\n",
-    "            target = 1\n",
-    "        elif file.startswith('RED') or file.startswith('YELLOW'):\n",
-    "            target = 0\n",
-    "        else:\n",
-    "            raise Exception(f\"A file isn't prepended with the target:  {file}\")\n",
-    "\n",
-    "        file_path = os.path.join(os.getcwd(), 'labeled_fbo_docs', file)\n",
-    "        with open(file_path, 'r', errors = 'ignore') as f:\n",
-    "            #do some newline replacing\n",
-    "            text = f.read().replace(\"\\n\", ' ').strip()\n",
-    "        data.append([target, text])\n",
-    "    else:\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Split the samples into training and test datasets\n",
-    "Since our data is imbalanced, we'll use the `stratify` kwarg to split the data in a stratified fashion, using the labels array."
    ]
   },
   {
@@ -67,8 +31,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25.00% of the training data is a positive sample\n",
-      "20.00% of the testing data is a positive sample\n"
+      "Done reading in 993 documents.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import random\n",
+    "\n",
+    "data = []\n",
+    "for file in os.listdir('labeled_fbo_docs'):\n",
+    "    if file.startswith('GREEN'):\n",
+    "        target = 1\n",
+    "    elif file.startswith('RED') or file.startswith('YELLOW'):\n",
+    "        target = 0\n",
+    "    else:\n",
+    "        raise Exception(f\"A file isn't prepended with the target:  {file}\")\n",
+    "\n",
+    "    file_path = os.path.join(os.getcwd(), 'labeled_fbo_docs', file)\n",
+    "    with open(file_path, 'r', errors = 'ignore') as f:\n",
+    "        #do some newline replacing\n",
+    "        text = f.read().replace(\"\\n\", ' ').strip()\n",
+    "    data.append([target, text])\n",
+    "    \n",
+    "print(f\"Done reading in {len(data)} documents.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Split the samples into training and test datasets\n",
+    "Since our data is imbalanced, we'll use the `stratify` method to split the data in a balanced fashion, using the labels array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27.33% of the training data is a positive sample\n",
+      "27.14% of the testing data is a positive sample\n"
      ]
     }
    ],
@@ -98,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,12 +131,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we'll read in the files we wrote just to make sure we do it correctly in our sagemaker scripts."
+    "Here we'll read in the files we wrote just to make sure we do it correctly in our sagemaker notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,27 +168,27 @@
        "    <tr>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>This is a combined synopsis/solicitation for c...</td>\n",
+       "      <td>OBJECTIVE    The RRB seeks electronic data sto...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>General Information:   Document Type:         ...</td>\n",
+       "      <td>Checklist and Certification for Minimum Level ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>Attachment 1                         Glossary ...</td>\n",
+       "      <td>Date Issued:  January 6, 2009 Date Due:  Febru...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>STATEMENT OF WORK     (SOW)    FOR    317 RCS/...</td>\n",
+       "      <td>Section SF 1449 - CONTINUATION SHEET    |ITEM ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>|SOLICITATION, OFFER AND AWARD                ...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Statement of Work                             ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -189,14 +196,14 @@
       ],
       "text/plain": [
        "   target                                               text\n",
-       "0     0.0  This is a combined synopsis/solicitation for c...\n",
-       "1     0.0  General Information:   Document Type:         ...\n",
-       "2     1.0  Attachment 1                         Glossary ...\n",
-       "3     0.0  STATEMENT OF WORK     (SOW)    FOR    317 RCS/...\n",
-       "4     0.0  |SOLICITATION, OFFER AND AWARD                ..."
+       "0     0.0  OBJECTIVE    The RRB seeks electronic data sto...\n",
+       "1     0.0  Checklist and Certification for Minimum Level ...\n",
+       "2     1.0  Date Issued:  January 6, 2009 Date Due:  Febru...\n",
+       "3     0.0  Section SF 1449 - CONTINUATION SHEET    |ITEM ...\n",
+       "4     1.0  Statement of Work                             ..."
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,15 +228,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done writing to s3n://srt-sm/Scikit-LinearLearner-pipeline-srt/srt_train.csv\n",
-      "Done writing to s3n://srt-sm/Scikit-LinearLearner-pipeline-srt/srt_test.csv\n"
+      "Done writing to s3n://srt-sm/Sklearn-RandomizedGridSearch/srt_train.csv\n",
+      "Done writing to s3n://srt-sm/Sklearn-RandomizedGridSearch/srt_test.csv\n"
      ]
     }
    ],
@@ -239,7 +246,7 @@
     "s3 = boto3.resource('s3')\n",
     "region = boto3.Session().region_name\n",
     "bucket = 'srt-sm' \n",
-    "prefix = 'Scikit-LinearLearner-pipeline-srt'\n",
+    "prefix = 'Sklearn-RandomizedGridSearch'\n",
     "bucket_path = f'https://s3-{region}.amazonaws.com/{bucket}'\n",
     "\n",
     "for f in ['srt_train.csv', 'srt_test.csv']:\n",
@@ -248,6 +255,13 @@
     "    url = f's3n://{bucket}/{key}'\n",
     "    print(f'Done writing to {url}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
