--- a/srt.ipynb
+++ b/srt.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create SageMaker session and role"
+    "# Create SageMaker session and role\n",
+    "\n",
+    "Here my make use of the execution role we gave the sagemaker notebook instance. This role provides access to the S3 bucket we created. "
    ]
   },
   {
@@ -15,7 +17,9 @@
    "source": [
     "# S3 prefix\n",
     "s3_bucket = 'srt-sm'\n",
-    "prefix = 'Scikit-LinearLearner-pipeline-srt'\n",
+    "\n",
+    "#prefix = 'Scikit-LinearLearner-pipeline-srt' #use this for a smaller subset of the training data\n",
+    "prefix = 'Scikit-RandomizedGridSearch' #this is all 993 labeled samples\n",
     "\n",
     "import sagemaker\n",
     "from sagemaker import get_execution_role\n",
@@ -31,14 +35,14 @@
    "metadata": {},
    "source": [
     "# Create a SageMaker Scikit estimator \n",
-    "To run our Scikit-learn training script on SageMaker, we construct a `sagemaker.sklearn.estimator.sklearn` estimator, which accepts several constructor arguments:\n",
+    "Here we create an insance of a `sagemaker.sklearn.estimator.sklearn` estimator. The constructor accepts several constructor arguments:\n",
     "\n",
-    " - **source_dir**: Path (absolute or relative) to a directory with any other training source code dependencies aside from tne entry point file (default: None). Structure within this directory are preserved when training on Amazon SageMaker.\n",
-    " - **entry_point**: The path to the Python script SageMaker runs for training and prediction.\n",
-    " - **role**: Role ARN\n",
-    " - **train_instance_type (optional)**: The type of SageMaker instances for training. Note: Because Scikit-learn does not natively support GPU training, Sagemaker Scikit-learn does not currently support training on GPU instance types.\n",
-    " - **sagemaker_session (optional)**: The session used to train on Sagemaker.\n",
-    " - **output_path (optional)**: s3 location where you want the training result (model artifacts and optional output files) saved. If not specified, results are stored to a default bucket. If the bucket with the specific name does not exist, the estimator creates the bucket during the fit() method execution.\n",
+    " - **source_dir**: Path (absolute or relative) to the directory with our custom model training source code.\n",
+    " - **entry_point**: The path to the Python script SageMaker runs for training and prediction within `source_dir`.\n",
+    " - **role**: Role ARN, which is provided by `get_execution_role()`\n",
+    " - **train_instance_type (optional)**: The type of SageMaker instances for training. Note: Because Scikit-learn does not natively support GPU training, Sagemaker Scikit-learn does not currently support training on GPU instance types. Also, note that you may need to request an EC2 quota increase for these ml ec2 instance types.\n",
+    " - **sagemaker_session (optional)**: The session used to train on Sagemaker, as returned by `sagemaker.Session()`.\n",
+    " - **output_path (optional)**: s3 location where you want the training result (model artifacts and optional output files) saved. If not specified, results are stored to a default bucket. If the bucket with the specific name does not exist, the estimator creates the bucket during execution of the `fit()` method.\n",
     " "
    ]
   },
@@ -59,7 +63,7 @@
     "grid_search = SKLearn(source_dir = source_dir,\n",
     "                      entry_point = entry_point,\n",
     "                      role = role,\n",
-    "                      train_instance_type = \"ml.c4.xlarge\",\n",
+    "                      train_instance_type = \"ml.c5.4xlarge\",\n",
     "                      sagemaker_session = sagemaker_session,\n",
     "                      output_path = model_output_path)\n",
     "\n",
@@ -87,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we've got a fitted model (i.e. the best estimator from the Grid Search), we'll deploy this model behind a single endpoint."
+    "We now have a fitted model (i.e. the best estimator from the Grid Search) in our s3 bucket. We can now deploy this model behind a single endpoint. When this is done, you'll be able to see this endpoint under **Endpoints** in the SageMaker console."
    ]
   },
   {
@@ -116,10 +120,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Make a request to the endpoint \n",
-    "Here we'll use the deployed model to get predictions for our test data. \n",
+    "# Request inferences from the endpoint \n",
+    "With our model deployed behind a REST API, we'll now make some requests to it in order to get inferences from our validation set. We can then use these inferences to see how well the trained model performs on out-of-sample data.\n",
     "\n",
-    "We need to make our request with the payload in `text/csv` format, since that is what our script currently supports (see `input_fn()` in our entrypoin). If other formats need to be supported, this would have to be added to the our entrypoint. Note that we set the `accept` to `application/json` to get our output, i.e. the inferences, that way."
+    "Note that we need to make our request with the payload in `text/csv` format, since that is what our script currently supports (see `input_fn()` in our entrypoint file). If other formats need to be supported, this would have to be added to that `input_fn()` function. Note, however, that we set the `accept` to `application/json` to get our output, i.e. the inferences, that way. We do this because our `ouput_fn()` function returns JSON."
    ]
   },
   {
@@ -132,8 +136,10 @@
     "from sagemaker.predictor import json_serializer, csv_serializer, json_deserializer, RealTimePredictor\n",
     "from sagemaker.content_types import CONTENT_TYPE_CSV, CONTENT_TYPE_JSON\n",
     "\n",
+    "#read in the validation set from the s3 bucket\n",
     "test_input = f's3://{s3_bucket}/{prefix}/srt_test.csv'\n",
     "\n",
+    "#convert it to a pandas dataframe\n",
     "test_df = pd.read_csv(test_input)\n",
     "\n",
     "def format_as_csv(text):\n",
@@ -149,8 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
+    "# create an instance of RealTimePredictor, which simplifies sending the requests\n",
     "predictor = RealTimePredictor(endpoint = endpoint_name,\n",
     "                              sagemaker_session = sagemaker_session,\n",
     "                              serializer = csv_serializer,\n",
@@ -164,12 +169,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "\n",
     "# request an inference for a single sample\n",
     "sample = test_df['1'].iloc[0]\n",
     "\n",
     "prediction_str = predictor.predict(sample)\n",
-    "prediction_dict = json.loads(prediction_str)\n",
-    "prediction_dict"
+    "print(prediction_str)"
    ]
   },
   {
@@ -178,11 +184,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# request inferences for multiple samples\n",
+    "# request inferences for all of the samples in the validation set\n",
     "samples = test_df['1'].tolist()\n",
     "predictions_str = predictor.predict(samples)\n",
     "predictions_dict = json.loads(predictions_str)\n",
     "predictions_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluate model performance on the validation set"
    ]
   },
   {
@@ -199,6 +212,17 @@
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "accuracy_score(y_true, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "clf_report = classification_report(y_true, y_pred)"
    ]
   },
   {
