--- a/data_analytics/fy23_data_analytics.ipynb
+++ b/data_analytics/fy23_data_analytics.ipynb
@@ -1,19 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "098f1499",
+   "metadata": {},
+   "source": [
+    "SRT FY 23 data analytics for the response to the Senate Aging Committee September 2023 "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy\n",
@@ -22,181 +21,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "32a008cc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>solNum</th>\n",
-       "      <th>title</th>\n",
-       "      <th>agency</th>\n",
-       "      <th>office</th>\n",
-       "      <th>createdAt</th>\n",
-       "      <th>reviewRec</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>W91249SoftwareMaint</td>\n",
-       "      <td>R4--Forensic Comparison Software Maintenance</td>\n",
-       "      <td>Department of Defense</td>\n",
-       "      <td>DEPT OF THE ARMY</td>\n",
-       "      <td>2022-10-01 10:01:29.299589</td>\n",
-       "      <td>Non-compliant (Action Required)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>140R1722Q0019</td>\n",
-       "      <td>Cable Positioning System</td>\n",
-       "      <td>Department of the Interior</td>\n",
-       "      <td>BUREAU OF RECLAMATION</td>\n",
-       "      <td>2022-10-01 10:01:29.376253</td>\n",
-       "      <td>Non-compliant (Action Required)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>19GH1022Q0011</td>\n",
-       "      <td>Internet Services For U.S. Embassy Accra, Ghana</td>\n",
-       "      <td>Department of State</td>\n",
-       "      <td>STATE, DEPARTMENT OF</td>\n",
-       "      <td>2022-10-01 10:01:29.392227</td>\n",
-       "      <td>Non-compliant (Action Required)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>421466</td>\n",
-       "      <td>Smaract Linear Positioner And Components Or It...</td>\n",
-       "      <td>Department of Energy</td>\n",
-       "      <td>ENERGY, DEPARTMENT OF</td>\n",
-       "      <td>2022-10-01 10:01:29.523025</td>\n",
-       "      <td>Non-compliant (Action Required)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>N0017823P6610</td>\n",
-       "      <td>Signal Analyzer</td>\n",
-       "      <td>Department of Defense</td>\n",
-       "      <td>DEPT OF THE NAVY</td>\n",
-       "      <td>2022-10-01 10:01:30.73475</td>\n",
-       "      <td>Non-compliant (Action Required)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                solNum                                              title  \\\n",
-       "0  W91249SoftwareMaint       R4--Forensic Comparison Software Maintenance   \n",
-       "1        140R1722Q0019                           Cable Positioning System   \n",
-       "2        19GH1022Q0011    Internet Services For U.S. Embassy Accra, Ghana   \n",
-       "3               421466  Smaract Linear Positioner And Components Or It...   \n",
-       "4        N0017823P6610                                    Signal Analyzer   \n",
-       "\n",
-       "                       agency                 office  \\\n",
-       "0       Department of Defense       DEPT OF THE ARMY   \n",
-       "1  Department of the Interior  BUREAU OF RECLAMATION   \n",
-       "2         Department of State   STATE, DEPARTMENT OF   \n",
-       "3        Department of Energy  ENERGY, DEPARTMENT OF   \n",
-       "4       Department of Defense       DEPT OF THE NAVY   \n",
-       "\n",
-       "                    createdAt                        reviewRec  \n",
-       "0  2022-10-01 10:01:29.299589  Non-compliant (Action Required)  \n",
-       "1  2022-10-01 10:01:29.376253  Non-compliant (Action Required)  \n",
-       "2  2022-10-01 10:01:29.392227  Non-compliant (Action Required)  \n",
-       "3  2022-10-01 10:01:29.523025  Non-compliant (Action Required)  \n",
-       "4   2022-10-01 10:01:30.73475  Non-compliant (Action Required)  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#Reading in the FY 23 data\n",
     "df = pd.read_csv ('fy23_data.csv')\n",
     "df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "4ebf5f4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Counting number of rows in dataset\n",
+    "len(df.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcac5a23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Counting number of agencies in dataset for FY 23\n",
+    "df_agency_count = df['agency'].nunique()\n",
+    "print(df_agency_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3bdc719",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#percentage of compliant & non compliant solicitations per agency\n",
+    "\n",
+    "#df4 = df.groupby('agency')['reviewRec'].count()\n",
+    "df8 = df.groupby('agency')['reviewRec'].value_counts(normalize=True) * 100\n",
+    "df8.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8703f897",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Counting total of review results per agency\n",
+    "df9 = df.groupby(['agency', 'reviewRec'])['reviewRec'].count()\n",
+    "df9.head(10)\n",
+    "df9.to_csv('reviewRec_total_by_agency.csv', encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c4da42a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#plot\n",
+    "\n",
+    "ax = df6.plot.bar(stacked=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "cd3a8c40",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "254"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Counting comliant solicitations\n",
     "df_count_compliant = df['reviewRec'].value_counts()['Compliant']\n",
     "df_count_compliant"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "39a3ffc1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "agency\n",
-      "ADMINISTRATIVE OFFICE OF THE US COURTS            1\n",
-      "AMERICAN BATTLE MONUMENTS COMMISSION              1\n",
-      "Agency for International Development              2\n",
-      "COMMODITY FUTURES TRADING COMMISSION              1\n",
-      "CONSUMER PRODUCT SAFETY COMMISSION                1\n",
-      "CORPORATION FOR NATIONAL AND COMMUNITY SERVICE    1\n",
-      "COURT SERVICES AND OFFENDER SUPERVISION AGENCY    1\n",
-      "Department of Agriculture                         2\n",
-      "Department of Commerce                            2\n",
-      "Department of Defense                             3\n",
-      "Name: reviewRec, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Counting compliant solicitations by agency\n",
     "df_compliant_by_agency = df.groupby('agency')['reviewRec'].nunique()\n",
     "print(df_compliant_by_agency.head(10))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "fe159d9c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Pivot table of review results (complaint, non compliant, cannot evaluate) by agency\n",
     "df_reviewRec = df.groupby(['agency', 'reviewRec']).size().unstack(fill_value=0)\n",
     "df_reviewRec.to_csv('agency_reviewRec.csv', encoding='utf-8')\n"
    ]
